err/improviser.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/improviser'...
Listing './lib/python3.5/site-packages/improviser/Blocks'...
Compiling './lib/python3.5/site-packages/improviser/Blocks/MutatingBlock.py'...
***   File "./lib/python3.5/site-packages/improviser/Blocks/MutatingBlock.py", line 25
    print res
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/improviser/Improviser.py'...
***   File "./lib/python3.5/site-packages/improviser/Improviser.py", line 8
    except Options.OptionError, str:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/improviser/Movements'...
Listing './lib/python3.5/site-packages/improviser/Musicians'...
Listing './lib/python3.5/site-packages/improviser/Musicians/Accompaniment'...
Listing './lib/python3.5/site-packages/improviser/Musicians/Bassists'...
Listing './lib/python3.5/site-packages/improviser/Musicians/Drummers'...
Listing './lib/python3.5/site-packages/improviser/Musicians/Guitarists'...
Listing './lib/python3.5/site-packages/improviser/Musicians/Pianists'...
Listing './lib/python3.5/site-packages/improviser/Musicians/Soloists'...
Compiling './lib/python3.5/site-packages/improviser/Options.py'...
***   File "./lib/python3.5/site-packages/improviser/Options.py", line 180
    raise OptionError, "Cannot handle version %d." % int(val)
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/improviser/Progressions'...
Compiling './lib/python3.5/site-packages/improviser/Sequencer.py'...
***   File "./lib/python3.5/site-packages/improviser/Sequencer.py", line 64
    print "|"
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/improviser/Visualizations'...
Compiling './lib/python3.5/site-packages/improviser/Visualizations/DefaultVisualization.py'...
***   File "./lib/python3.5/site-packages/improviser/Visualizations/DefaultVisualization.py", line 14
    print "%25s" % n,
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/improviser/Visualizations/PygameMixedVisualizations.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (PygameMixedVisualizations.py, line 12)
Compiling './lib/python3.5/site-packages/improviser/Visualizations/PygameVisualization.py'...
***   File "./lib/python3.5/site-packages/improviser/Visualizations/PygameVisualization.py", line 7
    print "Couldn't load the pygame library."
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/improviser/qtGUI'...
Compiling './lib/python3.5/site-packages/improviser/qtGUI/Browser.py'...
***   File "./lib/python3.5/site-packages/improviser/qtGUI/Browser.py", line 201
    print "Downloading %s..." % download
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/improviser/qtGUI/MainWindow.py'...
***   File "./lib/python3.5/site-packages/improviser/qtGUI/MainWindow.py", line 330
    except Options.OptionError, err:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/improviser/qtGUI/ProgressionDialog.py'...
***   File "./lib/python3.5/site-packages/improviser/qtGUI/ProgressionDialog.py", line 233
    print "Can't parse bar length"
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/improviser/qtGUI/UI'...
Compiling './lib/python3.5/site-packages/improviser/qtGUI/feedparser.py'...
***   File "./lib/python3.5/site-packages/improviser/qtGUI/feedparser.py", line 236
    raise AttributeError, "object has no attribute '%s'" % key
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/improviser-0.8.6.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
